--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour of DOM</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        h1{
+            color: green;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>This is my header with no Border</h1>
+    </header>
     <main>
         <h1>Welcome to my DOM</h1>
         <ul>
@@ -14,5 +23,14 @@
             <li>MD RAKIB</li>
         </ul>
     </main>
+
+
+
+    <script>
+        console.log("Hello from Javascript");
+        console.log("Hello, bole chole gelo")
+    </script>
+
+    <script src="hello.js"></script>
 </body>
 </html>
